Y1/Module_2_Object_Oriented_Programming/intellijml-1.1.7/src/test/syntaxAnnotatorTestData/SquareBraceButNotStar.java
package syntaxAnnotatorTestData;

public class SquareBraceButNotStar {
    int[] a;

    //@ assignable a[*];
    //@ assignable a [<error descr="Only '*' in between the square brackets is supported">x</error>];
    //@ assignable a[<error descr="Only '*' in between the square brackets is supported">0</error>..10];
    public void test(int x) {
        Object[] a;
    }
}
